# facedetection

./: .gitignore  .gitmodules  CMakeLists.txt  MobileFaceNet.onnx  README.md  build.sh  main.cpp  test.sh  Журнал_по_практике_Григорьева_Е_В_319Бк-22.docx
materials/: .clang-format
src/: FCA.h  FCA_func.cpp  YuNet.cpp  YuNet.h  database.cpp  database.h  face_detection.h  main.cpp  visualiser.cpp
src/tests/: test_database.cpp  test_visualiser.cpp
tests/: test_database.cpp  test_visualiser.cpp
